Se añade comentarios explicativos

--- a/hotel solution.ipynb
+++ b/hotel solution.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "df0a4b72-31c2-483e-a72b-469748ade844",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importamos las librerias\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -17,11 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9989d7b8-413a-414f-aa26-8c55d8cd5b76",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#cargamos la data\n",
     "df=pd.read_csv('hotel_bookings.csv')"
    ]
   },
@@ -451,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fdf33a3f-ee8a-432e-9dd8-caae61c64369",
    "metadata": {},
    "outputs": [
@@ -501,6 +503,7 @@
     }
    ],
    "source": [
+    "#vemos si todas las columnas tienen aporte\n",
     "df.info()"
    ]
   },
@@ -1373,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "d90e7a91",
    "metadata": {},
    "outputs": [
@@ -1422,6 +1425,8 @@
     }
    ],
    "source": [
+    "#realizamos un enconding a todos los datos tipo object\n",
+    "#con el fin de realizar modelos de predicción\n",
     "from sklearn import preprocessing\n",
     "\n",
     "label_encoder= preprocessing.LabelEncoder()\n",
@@ -1640,11 +1645,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "8a183283",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#valores para realizar undersampling y oversampling\n",
     "count_class_0, count_class_1 =df_train.is_canceled.value_counts()\n",
     "\n",
     "df_class_0 = df_train[df_train['is_canceled'] == 0]\n",
@@ -1779,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "677af84d-220d-48ba-82fc-814c00d31edb",
    "metadata": {},
    "outputs": [
@@ -1795,22 +1801,23 @@
     }
    ],
    "source": [
+    "#visualizamos las variables para ver si tenemos que hacer limpieza\n",
     "valores = df[['lead_time', 'arrival_date_year', 'arrival_date_week_number', 'arrival_date_day_of_month', \n",
     "              'stays_in_weekend_nights', 'stays_in_week_nights', 'adults', 'children', 'babies', \n",
     "              'is_repeated_guest', 'previous_cancellations', 'previous_bookings_not_canceled', \n",
     "              'booking_changes', 'agent', 'days_in_waiting_list', 'adr', \n",
     "              'required_car_parking_spaces', 'total_of_special_requests']]\n",
     "\n",
-    "plt.figure(figsize=(12, 16))  # Tamaño ajustado para acomodar varios gráficos\n",
-    "plt.xticks(rotation=90)      # Rotar etiquetas de eje X para mejor legibilidad\n",
+    "plt.figure(figsize=(12, 16)) \n",
+    "plt.xticks(rotation=90)      \n",
     "\n",
     "# Crear gráficos de caja individuales\n",
     "for i, column in enumerate(valores.columns):\n",
-    "    plt.subplot(5, 4, i + 1)  # Crear una cuadrícula 5x4 de subplots\n",
-    "    plt.boxplot(valores[column].dropna())  # Ignorar valores NaN\n",
+    "    plt.subplot(5, 4, i + 1)  \n",
+    "    plt.boxplot(valores[column].dropna())  #ignora los valores NaN\n",
     "    plt.title(column)\n",
     "\n",
-    "plt.tight_layout()  # Ajustar diseño para evitar solapamiento\n",
+    "plt.tight_layout()  \n",
     "plt.show()"
    ]
   },
@@ -1906,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "2c21c54a",
    "metadata": {},
    "outputs": [
@@ -1927,6 +1934,7 @@
     }
    ],
    "source": [
+    "#presentamos el reporte de los modelos\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "print(classification_report( y_test, y_pred_tree))\n"
@@ -1959,12 +1967,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2f1da12",
+   "cell_type": "markdown",
+   "id": "84e2e3de",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusión\n",
+    "+ Por ser un data sintetica se puede ver que las predicciones han sido exactas\n",
+    "+ Se puede intentar con otros modelos menos robustos a ver qué pasa\n",
+    "+ Es un modelo que no se presentaria en la vida real"
+   ]
   }
  ],
  "metadata": {
